syntax = "proto3";

import "google/protobuf/struct.proto";
import "scope.proto";
import "timeframe.proto";

option csharp_namespace = "SquaredUp.Extensibility.Protocol";

//-------------------------------------------------------------------------------------
//
//  All SCOM performance (allscomperf)
//
//-------------------------------------------------------------------------------------

// tile/allscomperf
message AllScomPerfTileConfig {

	AllScomPerfTileConfig_Source source = 1;

	AllScomPerfTileConfig_Display display = 2;

}

message AllScomPerfTileConfig_Source {

	// default is 'average'
	string aggregate_value_type = 1;

	// default is 'raw'
	string resolution = 2; 

	CommonTimeframe timeframe = 3;

	// These settings are shared/used by other performance tiles (and are not specified by allscomperf's defaults)
	// - but in practice these values are set on various dashboards (e.g. all-performance.json) and are specified
	// here for completeness as optional values
	//
	// !! Naming conventions here are broken !!
	//
	// Typically * (any)
	string objectname = 4;  

	// Typically * (any)
	string countername = 5;
}

message AllScomPerfTileConfig_Display {

	// Default is 'fit'
	string range = 1;
}

//-------------------------------------------------------------------------------------
// tile/scomperf-as-bar

message ScomPerfAsBarTileConfig {
	ScomPerfAsBarTileConfig_Source source = 1;
	ScomPerfAsBarTileConfig_Display display = 2;
	ScomPerfAsBarTileConfig_Context context = 3;
}

message ScomPerfAsBarTileConfig_Source {
	// default is 'average'
	string aggregate_value_type = 1;

	// default is 'raw'
	string resolution = 2; 

	CommonTimeframe timeframe = 3;

	// e.g. "LogicalDisk"
	string objectname = 4;  

	// e.g. "% Free Space"
	string countername = 5;

	// e.g. "_Total"
	string instancename = 6;
}

message ScomPerfAsBarTileConfig_Display {
	string label_template = 1;

	// e.g. percentage
	string range = 2;	

	// !! Naming convention inconsistency here !!
	repeated string unitkey = 3;

	// e.g. auto
	string label = 4;

	double height = 5;

	string link_template = 6;
}

message ScomPerfAsBarTileConfig_Context {
	CommonScope scope = 1;
}

//-------------------------------------------------------------------------------------
// tile/scomperf-as-heatmap

message ScomPerfAsHeatmapTileConfig {
	ScomPerfAsHeatmapTileConfig_Context context = 1;
	ScomPerfAsHeatmapTileConfig_Source source = 2;
	ScomPerfAsHeatmapTileConfig_Display display = 3;
}

message ScomPerfAsHeatmapTileConfig_Source {
	string aggregate_value_type = 1;

	// default is 'raw'
	string resolution = 2; 

	// e.g. "LogicalDisk"
	string objectname = 3;  

	// e.g. "% Free Space"
	string countername = 4;

	// e.g. "_Total"
	string instancename = 5;
}

message ScomPerfAsHeatmapTileConfig_Context {
	CommonScope scope = 1;
}

message ScomPerfAsHeatmapTileConfig_Display {
	double size_scale = 1;

	uint32 red = 2;
	uint32 green = 3;
	uint32 blue = 4;

	// e.g. properties.isVirtualNode
	string size_property = 5;

	double height = 6;
}

//-------------------------------------------------------------------------------------
// tile/scomperf-as-line-graph

message ScomPerfAsLineGraphTileConfig {
	ScomPerfAsLineGraphTileConfig_Context context = 1;
	ScomPerfAsLineGraphTileConfig_Source source = 2;
	ScomPerfAsLineGraphTileConfig_Display display = 3;
}

message ScomPerfAsLineGraphTileConfig_Source {
	string aggregate_value_type = 1;

	// default is 'raw'
	string resolution = 2; 

	// e.g. "LogicalDisk"
	string objectname = 3;  

	// e.g. "% Free Space"
	string countername = 4;

	string instancename = 5;

	CommonTimeframe timeframe = 6;
}

message ScomPerfAsLineGraphTileConfig_Context {
	CommonScope scope = 1;
}

message ScomPerfAsLineGraphTileConfig_Display {

	// e.g. fit
	string range = 1;

	// e.g. object, counter
	repeated string unit_key = 2;

	double height = 3;

	string label = 4;

	string custom_label = 5;

	string link_template = 6;
	string label_template = 7;

	double rangemax = 8;
	double rangemin = 9;
}

//-------------------------------------------------------------------------------------
// tile/scomperf-as-line-graph-report

message ScomPerfAsLineGraphReportTileConfig {
	ScomPerfAsLineGraphReportTileConfig_Source source = 1;
	ScomPerfAsLineGraphReportTileConfig_Display display = 2;
}

message ScomPerfAsLineGraphReportTileConfig_Source {
	string aggregate_value_type = 1;

	// default is 'raw'
	string resolution = 2; 

	// e.g. "LogicalDisk"
	string objectname = 3;  

	// e.g. "% Free Space"
	string countername = 4;

	string instancename = 5;

	CommonTimeframe timeframe = 6;
}

message ScomPerfAsLineGraphReportTileConfig_Display {
	
	// e.g. fit
	string range = 1;
	double height = 2;
}

//-------------------------------------------------------------------------------------
// tile/scomperf-as-spark-lines

message ScomPerfAsSparklinesTileConfig {
	ScomPerfAsSparklinesTileConfig_Context context = 1;
	ScomPerfAsSparklinesTileConfig_Source source = 2;
	ScomPerfAsSparklinesTileConfig_Display display = 3;
}

message ScomPerfAsSparklinesTileConfig_Context {
	CommonScope scope = 1;
}

message ScomPerfAsSparklinesTileConfig_Source {
	string aggregate_value_type = 1;

	// default is 'raw'
	string resolution = 2; 

	// e.g. "LogicalDisk"
	string objectname = 3;  

	// e.g. "% Free Space"
	string countername = 4;

	string instancename = 5;

	CommonTimeframe timeframe = 6;
}

message ScomPerfAsSparklinesTileConfig_Display {

	string label_template = 1;

	// e.g. percentage
	string range = 2;	
	
	// !! Naming convention inconsistency here !!
	repeated string unitkey = 3;

	// e.g. auto
	string label = 4;

	// !! Naming convention inconsistency here !!
	//
	double rangemin = 5;

	double rangemax = 6;

	string custom_label = 7;
	
	// Unknown/unverified content
	map<string, google.protobuf.Value> metadata = 8;

	double height = 9;

	string link_template = 10;
}